--- a/frontend/src/components/nav/navbar.css
+++ b/frontend/src/components/nav/navbar.css
@@ -21,8 +21,6 @@
   width: 13vw;
 }
 
-
-
 .NavBar a {
   padding: 2px 20px;
   /* margin: 0 max(0.4vw, 25px); */
@@ -54,8 +52,52 @@
   border-radius: 0px 0px 8px 8px;
 }
 
+#sandwich-icon {
+  display: inline-block;
+  cursor: pointer;
+}
+
+#bar1, #bar2, #bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: rgb(199, 199, 199);
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+/* Rotate first bar */
+.change #bar1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
+  transform: rotate(-45deg) translate(-9px, 6px) ;
+}
+
+/* Fade out the second bar */
+.change #bar2 {
+  opacity: 0;
+}
+
+/* Rotate last bar */
+.change #bar3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
+  transform: rotate(45deg) translate(-8px, -8px) ;
+}
+
+#side-nav {
+  height: 100%; /* 100% Full-height */
+  width: 0; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+  overflow: scroll;
+  background-color: #111; /* Black*/
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 60px; /* Place content 60px from the top */
+  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
 #user-menu {
   font-size: 24px;
   cursor: pointer;
-  padding: 10px;
+  padding: 20px;
 }
