Make overflow hidden for splash description

--- a/frontend/src/components/main/main_page.css
+++ b/frontend/src/components/main/main_page.css
@@ -57,7 +57,7 @@
     padding-right: 2vw;
     background-position: bottom;
     /* margin-top: 81px; */
-    overflow: visible;
+    overflow: hidden;
     position: relative;
     top: 2vh;
     /* margin: 0 10vw; */
