--- a/frontend/src/components/backlog/backlog.css
+++ b/frontend/src/components/backlog/backlog.css
@@ -1,5 +1,4 @@
 .selected-games-container {
-  padding-top: 50px;
   animation: fadeIn 1.2s;
   -webkit-animation: fadeIn 1.2s;
   -moz-animation: fadeIn 1.2s;
@@ -79,6 +78,7 @@
   overflow: hidden;
   outline: 1.5px solid rgb(255, 255, 255);
   outline-offset: -6px;
+  cursor: pointer;
   transition: 0.5s;
 }
 
@@ -95,11 +95,6 @@
   opacity: 0.8;
 }
 
-#no-games {
-  filter: invert(1);
-  opacity: 0.85;
-  border-radius: 10px;
-}
 
 .backlogGame-title {
   /* width: 403px; */
@@ -142,6 +137,7 @@
   margin: 3px 3px;
   box-shadow: rgba(0, 0, 0, 0.69) 0px 26px 30px -10px, rgba(48, 48, 48, 0.185) 0px 16px 10px -10px;
   transition: all 0.4s ease 0s;
+  z-index: 2;
 }
 
 .add-to-played, .remove-game, .remove-from-played {
@@ -179,4 +175,37 @@
 
 .selected-games-container span:hover {
   color:rgba(255, 255, 255, 0.932);
+}
+
+.tab-list {  
+  border-bottom: 1px solid #ccc;
+  display:flex;
+  flex-direction: row;
+  position: sticky;
+  padding-left: 0px;
+  z-index: 3;
+  top: 0px;
+  padding-top: 40px;
+  height: 80px;
+  background-color: black;
+}
+
+.tab-list-item {
+  width: 175px;
+  display: inline-block;
+  list-style: none;
+  margin-bottom: -1px;
+  padding: 0.5rem 0.75rem;
+}
+
+.tab-list-active {
+  background-color: rgb(61, 61, 61);
+  border: solid rgb(61, 61, 61);
+  border-width: 1px 1px 0 1px;
+}
+
+#no-games {
+  filter: invert(1);
+  opacity: 0.85;
+  border-radius: 10px;
 }
