--- a/frontend/src/components/gitHub/plugs.css
+++ b/frontend/src/components/gitHub/plugs.css
@@ -71,6 +71,7 @@
   transition: all 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s !important;
   border-radius: 10px;
   text-align: center;
+  align-items: center;
 }
 
 .developers:hover img {
@@ -143,4 +144,58 @@ a:active {
 
 .extra-links span:hover {
   cursor: pointer;
+}
+
+.website-links {
+  display: flex;
+  flex-direction: row;
+  grid-gap: 0.5vw;
+  justify-content: center;
+  gap: 0.5vw;
+}
+
+.website-links img {
+  width: 4.2vw;
+  height: 3.75vw;
+  filter: drop-shadow(5px 3px 4px #000000c9);
+}
+
+#github-img:hover::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background: #f00;
+  opacity: 0.7;
+  mix-blend-mode: multiply;
+}
+
+#github-img:hover > * {
+  color: white;
+}
+
+#linkedin-img:hover {
+
+}
+
+#website-img:hover {
+
+}
+
+.about:hover::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background: #f00;
+  opacity: 0.7;
+  mix-blend-mode: multiply;
+}
+
+.about:hover > * {
+  color: rgb(129, 5, 5);
 }
