Adjust styling for login and profile page for platform responsiveness

--- a/frontend/src/components/profile/profile.css
+++ b/frontend/src/components/profile/profile.css
@@ -45,6 +45,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 
 .profile-box > img{
@@ -58,14 +59,14 @@
 .profile-box h1 {
   position: relative;
   bottom: 5px;
-  font-size: min(17vmax, 2.4vmax);
+  font-size: clamp(34px, 2.8vw, 3.4vw);
   font-family: 'Rajdhani', sans-serif;
 }
 
 .profile-box h2 {
   position: relative;
   bottom: 10px;
-  font-size: min(3vmax, 1.3vmax);
+  font-size: clamp(18px, 1vw, 1.4vw);
   font-weight: lighter;
   text-align: center;
 }
@@ -74,10 +75,10 @@
     position: relative;
     top: 5px;
     /* margin-top: 30px !important; */
-    padding: 0.5vw 2vw;
+    padding: clamp(15px, 0.9vw, 0.9vw);
     /* width: 102px; */
     text-align: center;
-    font-size: min(3vmax, 1.1vmax);
+    font-size: clamp(16px, 1.1vmax, 1.4vmax);
     border-radius: 8px;
     background-color: rgb(230, 50, 50);
     font-weight: 600;
