--- a/frontend/src/components/gitHub/plugs.css
+++ b/frontend/src/components/gitHub/plugs.css
@@ -59,7 +59,7 @@
   justify-content: space-evenly;
 }
 
-@media (max-width: 726px) {
+@media (max-width: 980px) {
   .plugs {
     overflow: visible scroll;
     max-height: calc(100vh - 1px);
@@ -70,7 +70,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    margin: 0 auto;
+    margin: 25px auto;
     gap: 50px;
   }
 
