--- a/frontend/src/components/nav/navbar.css
+++ b/frontend/src/components/nav/navbar.css
@@ -20,7 +20,7 @@
 
 #nav-logo img {
   width: 200px;
-  /* margin-left: 80px; */
+  margin-left: 5vw;
 }
 
 .NavBar a {
@@ -105,5 +105,5 @@
 #user-menu {
   font-size: 24px;
   cursor: pointer;
-  padding: 20px;
+  padding: 0 20px;
 }
