--- a/frontend/src/components/recommender/genres_index.css
+++ b/frontend/src/components/recommender/genres_index.css
@@ -1,11 +1,20 @@
 .game-dart-container{
-  height: 100%;
+  /* height: 100%; */
   top: 0;
+  position:fixed;
+  padding:0;
+  margin:0;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100%;
+  overflow-x: scroll;
 }
 
 .game-dart-container h1 {
   font-size: 2.5em;
-  position: relative;
+  position: fixed;
+  width: 100%;
   top: 45px;
   text-align: center;
   font-family: 'Rajdhani', sans-serif;
@@ -16,15 +25,15 @@
   -ms-animation: fadeIn 1.2s;
 }
 
-.genres-container{ 
+.genres-container { 
   font-size: 30px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 15px;
-  top: 43px;
-  position: relative;
+  top: 111px;
+  position: fixed;
   margin: auto;
-  width: 92%;
+  width: 100%;
   animation: fadeIn 1.2s;
   -webkit-animation: fadeIn 1.2s;
   -moz-animation: fadeIn 1.2s;
@@ -43,7 +52,7 @@
   /* width: calc(100%/5 - 17px); */
   height: 25.5vh;
   border-radius: 12px;
-  overflow: hidden;
+  /* overflow: hidden; */
   background: linear-gradient(rgba(17, 17, 19, 0.445), rgba(10, 10, 1, 0.801));
   transition: all 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s !important;
   /* text-align: center; */
@@ -61,7 +70,7 @@
   transform: scale(1.08);
   /* background: linear-gradient(rgb(58, 60, 74), rgb(36, 38, 50)); */
   cursor: pointer;
-  overflow:hidden;
+  /* overflow:hidden; */
   color: rgba(214, 214, 214, 0.308);
   outline: 1.9px solid rgb(224, 224, 224);
 }
@@ -178,9 +187,10 @@
 .games-per-genre {
   font-size: 30px;
   top: 50px;
-  position: relative;
+  /* position: relative; */
   /* margin: auto; */
-  width: 100%;
+  /* width: 100%; */
+  /* overflow: visible; */
 }
 
 .games-per-genre p {
@@ -222,22 +232,23 @@
 }
 
 .genre-game {
-  width: 18.7vw;
+  width: 20vw;
   /* height: auto; */
   transition: all 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s !important;
+  opacity: 0.6;
 }
 
 .genre-game img{
   width:100%;
 }
 
-.genre-game {
-  opacity: 0.6;
+.genre-game img:hover {
+  cursor: pointer;
 }
 
 .genre-game:hover {
-  /* transform: scale(1.08); */
   opacity: 1;
+  /* transform: scale(1.08); */
 }
 
 .genre-game:hover > #view-game-page {
@@ -271,15 +282,12 @@
 .select-game-image img {
   box-shadow: rgba(0, 0, 0, 0.69) 0px 26px 30px -10px, rgba(0, 0, 0, 0.73) 0px 16px 10px -10px;
   transition: all 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s !important;
-  overflow:visible;
+  overflow: visible;
 }
 
 .select-game-image:hover {
-  transition: all 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s !important;
   transform: translate(0px, -30px);
-  cursor: pointer;
   transform: scale(1.08);
-  opacity: 1;
 }
 
 /* .genre-game-index {
@@ -293,6 +301,7 @@
   -o-animation: fadeIn linear 1.5s;
   -ms-animation: fadeIn linear 1.5s;
 } */
+
 
 input[type="checkbox"] {
   display: none;
@@ -309,21 +318,22 @@ input[type="checkbox"] {
 }
 
 .select-games-form {
-  margin-top: 0.2vh;
-  height: 69vh;
+  /* margin-top: 0.2vh;
+  height: 69vh; */
+  /* overflow: visible; */
   /* margin: auto; */
-  position: fixed;
+  /* position: fixed; */
   animation: fadeIn linear 1.2s;
   -webkit-animation: fadeIn linear 1.2s;
   -moz-animation: fadeIn linear 1.2s;
   -o-animation: fadeIn linear 1.2s;
   -ms-animation: fadeIn linear 1.2s;
-  left: 50px;
+  /* left: 50px; */
 }
 
 .submit-select-button {
   color: white;
-  position: absolute;
+  position: fixed;
   left: 50%;
   margin: 0;
   transform: translate(-50%, 50%);
@@ -347,10 +357,10 @@ input[type="checkbox"] {
   /* transform: translate(-50%, 20%); */
   position: relative;
   /* margin-left: 24px; */
-  top: 5;
+  /* top: 5; */
   text-align: center;
   box-shadow: rgba(0, 0, 0, 0.69) 0px 26px 30px -10px, rgba(0, 0, 0, 0.73) 0px 16px 10px -10px;
-  top: 63vh;
+  /* top: 63vh; */
 }
 
 #game-dart-button:hover {
@@ -392,13 +402,11 @@ input[type="checkbox"] {
 }
 
 .genre-row {
+  position: relative;
+  top: 60px;
   display: flex;
   width: max-content;
   transition: all 1.4s;
-  position: fixed;
-  /* overflow:scroll;
-  margin-left: auto;
-  margin-right: auto; */
 }
 
 .left-arrow {
@@ -410,7 +418,6 @@ input[type="checkbox"] {
   z-index: 1;
   cursor: pointer;
   transition: all 0.3s;
-  height: 100%;
 }
 
 .right-arrow {
@@ -422,7 +429,6 @@ input[type="checkbox"] {
   z-index: 1;
   cursor: pointer;
   transition: all 0.3s;
-  height: 100%;
 }
 
 .left-arrow:hover {
@@ -461,7 +467,7 @@ input[type="checkbox"] {
 
   .genre-row {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     overflow: visible scroll;
   }
@@ -469,5 +475,9 @@ input[type="checkbox"] {
   .select-games-form {
     display: flex;
     justify-content: center;
+  }
+
+  .genre-game {
+    width: 200px;
   }
 }
