--- a/frontend/src/components/recommender/genres_index.css
+++ b/frontend/src/components/recommender/genres_index.css
@@ -8,7 +8,7 @@
   left:0;
   width: 100%;
   height: 100%;
-  overflow-x: scroll;
+  overflow: scroll;
 }
 
 .game-dart-container h1 {
@@ -77,11 +77,11 @@
 
 #Racing:hover {
   background: url('https://media1.giphy.com/media/pBrRTmxSZEuAxsxr5S/giphy.gif?cid=ecf05e47uwzyn5qm7jgt8wayiy64kcr4guet2pmi03katozy&rid=giphy.gif&ct=g');
-  /* background-size: cover; */
+  background-size: cover;
   background-origin: content-box;
   max-width: 100%;
-  background-size: initial;
-  background-position: fixed center;
+  /* background-size: initial; */
+  background-position: center;
   /* max-height: 100%; */
 }
 
@@ -196,8 +196,9 @@
 .games-per-genre p {
   font-size: 0.55em;
   position: relative;
+  top: 12px;
   bottom: inherit;
-  right: 25px;
+  right: 11px;
   color: rgba(128, 128, 128, 0.473);
   transition: all 0.4s ease 0s;
 }
@@ -232,7 +233,7 @@
 }
 
 .genre-game {
-  width: 20vw;
+  width: clamp(200px, 20vw, 20vw);
   /* height: auto; */
   transition: all 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s !important;
   opacity: 0.6;
@@ -371,22 +372,21 @@ input[type="checkbox"] {
 }
 
 #back-to-genres {
-  margin-left: 25px;
-  margin-bottom: -30px;
-  position: relative;
-  bottom: 21px;
+  position: fixed;
   display: flex;
   justify-content: space-between;
+  top: 50px;
+  width: 100%;
+  z-index: 7;
 }
 
 #back-to-genres-button {
   cursor: pointer;
+  /* position: fixed; */
+  margin-left: 15px;
   font-size: 1.7em;
   color: rgba(112, 112, 112, 0.247);
-  position: relative;
-  top: -40px;
-  left: -5px;
-  transition: all 0.4s ease 0s;
+  transition: all 0.4s ease 0s; 
 }
 
 #back-to-genres-button:hover {
@@ -396,33 +396,51 @@ input[type="checkbox"] {
 }
 
 #return-to-genres-text {
-  position: relative;
-  bottom: 7px;
+  position: fixed;
+  top: 10px;
+  right: 10px;
   font-size: 25px;
   color:rgb(128, 128, 128)
 }
 
 .genre-row {
-  position: relative;
-  top: 60px;
+  position: absolute;
+  top: clamp(24vh, 12vw, 129px);
   display: flex;
   width: max-content;
   transition: all 1.4s;
 }
 
-.left-arrow {
-  margin-top: 25vh;
-  margin-left: 0.7vw;
-  font-size: 1.8em;
-  color: rgba(128, 127, 127, 0.151);
+.game-scroll-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   position: fixed;
-  z-index: 1;
+  top: 50%;
+  width: 100%;
+  z-index: 5;
+}
+
+.left-arrow {
+  position: fixed;
+  left: 10px;  
+  font-size: 1.8em;
+  color: rgba(0, 0, 0, 0.473);
   cursor: pointer;
   transition: all 0.3s;
 }
 
 .right-arrow {
-  margin-top: 25vh;
+  position: fixed;
+  right: 10px;
+  font-size: 1.8em;
+  color: rgba(0, 0, 0, 0.473);
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+/* .right-arrow {
+  top: 50%;
   margin-left: 96vw;
   font-size: 1.8em;
   color: rgba(128, 127, 127, 0.151);
@@ -430,7 +448,7 @@ input[type="checkbox"] {
   z-index: 1;
   cursor: pointer;
   transition: all 0.3s;
-}
+} */
 
 .left-arrow:hover {
   color: white;
@@ -458,9 +476,7 @@ input[type="checkbox"] {
 }
 
 
-
-
-@media (max-width: 777px) {
+@media (max-width: 813px) {
   .game-dart-container h1 {
     font-size: clamp(38px, 50%, 9vw);
   }
@@ -495,15 +511,18 @@ input[type="checkbox"] {
     position: relative;
     top: 5px;
   }
+}
 
+@media (max-width: 777px) {
   .genre-row {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    position: relative;
-    left: 1260px;
-    padding-right: 40px;
-    padding-left: 45px;
+    position: aboslute;
+    top: 80px;
+    left: 0%;
+    padding-right: 5vw;
+    padding-left: 5vw;
   }
 
   .select-games-form {
@@ -514,10 +533,42 @@ input[type="checkbox"] {
   }
 
   .genre-game {
-    width: clamp(280px, 30vw, 30vw);
+    width: clamp(42vh, 30vw, 30vw);
   }
 
   .left-arrow, .right-arrow {
     opacity: 0;
+    position: relative;
+    top: 1000000px;
   }
+
+  #back-to-genres {
+    opacity: 0;
+  }
+}
+
+@media (max-height: 380px) {
+  .genre-game {
+    width: clamp(1px, 25vw, 25vw);
+  }
+
+  .submit-select-button {
+  color: white;
+  position: fixed;
+  bottom: 50px;
+  left: 50%;
+  margin: 0;
+  transform: translate(-50%, 50%);
+  font-weight: 600;
+  border-style: none;
+}
+
+.submit-select-button input {
+  padding: 8px 30px;
+  border-radius: 8px;
+  border-color: transparent;
+  color: white;
+  font-size: 18px;
+  font-weight: 600;
+}
 }
