Add rule position fixed for background image in GameDart

--- a/frontend/src/components/recommender/genres_index.css
+++ b/frontend/src/components/recommender/genres_index.css
@@ -9,6 +9,7 @@
   width: 100%;
   height: 100%;
   overflow: scroll;
+  background-attachment: fixed;
 }
 
 .game-dart-container h1 {
@@ -81,7 +82,7 @@
   background-origin: content-box;
   max-width: 100%;
   /* background-size: initial; */
-  background-position: center;
+  background-position: bottom;
   /* max-height: 100%; */
 }
 
