Adjust background position for gamedart

--- a/frontend/src/components/recommender/genres_index.css
+++ b/frontend/src/components/recommender/genres_index.css
@@ -9,7 +9,8 @@
   width: 100%;
   height: 100%;
   overflow: scroll;
-  background-attachment: fixed;
+  background-position: bottom;
+  background-size: cover;
 }
 
 .game-dart-container h1 {
@@ -82,7 +83,7 @@
   background-origin: content-box;
   max-width: 100%;
   /* background-size: initial; */
-  background-position: bottom;
+  background-position: center;
   /* max-height: 100%; */
 }
 
@@ -135,7 +136,6 @@
   background: url('https://media4.giphy.com/media/jxJjBMvqEvMSA/giphy.gif?cid=ecf05e47e1b4c4i1iu1cf0ldk639uxnmx2ll3vb03vswibre&rid=giphy.gif&ct=g');
   background-size: cover;
   background-origin: content-box;
-  background-attachment: fixed;
   max-width: 100%;
   background-position: center;
   max-height: 100%;
@@ -484,10 +484,6 @@ input[type="checkbox"] {
     font-size: clamp(38px, 50%, 9vw);
   }
 
-  .game-dart-container {
-    background-attachment: fixed;
-  }
-
   #select-genre {
     position: relative;
   }
@@ -531,17 +527,9 @@ input[type="checkbox"] {
   .genre-item {
     border-radius: 0px;
   }
-
-  .game-dart-container {
-    background-attachment: fixed;
-  }
 }
 
 @media (max-width: 777px) {
-  .game-dart-container {
-    background-attachment: fixed;
-  }
-
   .genre-row {
     display: flex;
     flex-direction: row;
