Fix logo image on GameDart start page

--- a/frontend/src/components/nav/navbar.css
+++ b/frontend/src/components/nav/navbar.css
@@ -23,6 +23,10 @@
   margin-left: 5vw;
 }
 
+#splash-nav-logo img {
+  width: 200px;
+}
+
 .NavBar a {
   padding: 2px 20px;
   /* margin: 0 max(0.4vw, 25px); */
