--- a/frontend/src/components/recommender/game_dart_start.css
+++ b/frontend/src/components/recommender/game_dart_start.css
@@ -4,11 +4,12 @@
 }
 
 .game-dart-info-container img {
-  height: 20vh;
+  width: 75%;
+  margin-bottom: -2vh;
+  height: auto;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: auto;
   padding-top: 30px;
   animation: fadeIn 1.2s;
   -webkit-animation: fadeIn 1.2s;
@@ -87,4 +88,18 @@
   cursor: pointer;
   background-color: rgb(255, 59, 59);
   transition: all 0.4s ease 0s;
+}
+
+@media (max-width: 400px) {
+  .game-dart-info-container img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media (max-height: 380px) {
+  .game-dart-info-container img {
+    width: 100%;
+    height: 100%;
+  }
 }
